--- a/restaurant_menu/templates/menu_item_detail.html
+++ b/restaurant_menu/templates/menu_item_detail.html
@@ -5,7 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>Menu Item Details</h1>
+    <h1>{{ item.meal }}</h1>
+    <p>{{ item.description }}</p>
+    <p>{{ item.price }}</p>
 </body>
 
 </html>
