--- a/restaurant_menu/templates/base.html
+++ b/restaurant_menu/templates/base.html
@@ -20,7 +20,7 @@
                             <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="{% url 'home' %}">About</a>
+                            <a class="nav-link" aria-current="page" href="{% url 'about' %}">About</a>
                         </li>
                     </ul>
                 </div>
